# tensorflow-tests

./: .gitignore  RM_00_FB_FZI_ZeiterfassungHiwi_oct16.xlsx  TODO.md  quantize_extract.py  readme.md  segment_reduction_ops_summary.cc  sumReduction_cuda_summary.cc  timeline.html  todo.md
bilateral_gaussian/: bilateral_gaussian_permutohedral.cc  cuda_op_kernel.cc  cuda_op_kernel.cu.cc  permutohedral.h  readme.md  test_bilateral_gaussian_permutohedral.py  test_bilateral_gaussian_permutohedral_CUDA.py
bilinear_interpolation/: caffe_deconv_bilinear_filler.cc
cmake/: README.md
cmake/testproj/: CMakeLists.txt
cmake/testproj/src/: Student.cpp  mainapp.cpp
eigen_cuda_tests/: Makefile  cxx11_tensor_reduction_cuda  cxx11_tensor_reduction_cuda.cu  output.txt
eigen_tests/: Makefile  eigen_test_tensor_reduction  eigen_test_tensor_reduction.cc  output.txt
munkres-tf/: README.md  munkres_slim.py  munkres_tensorflow.py  test_find_first_elem.py  test_find_first_zero.py
organisation/: RM_00_FB_FZI_ZeiterfassungHiwi.xltx  RM_00_FB_FZI_ZeiterfassungHiwi_Apr_17.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_Feb_17.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_Mar_17.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_May_17.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_dec16.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_jan_17.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_nov16.xlsx  RM_00_FB_FZI_ZeiterfassungHiwi_oct16.xlsx  Zeiterfassung beachten.txt
quantization/: README.md  benchmark.md  convert_graph_to_fp16.py  convert_graph_to_fp16_separate.py  mnist_export.py  ode_int.py  output_fp16.txt  output_fp32.txt  run_CIFAR.sh  (+2 more)
(+73 files in other folders)
